--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "twiceover-client",
-  "version": "0.1.0",
+  "productName": "Twice-Over",
+  "description": "Iterative code review tool supporting cross-iteration diffing and change commenting with syntax highlighting",
+  "version": "0.1.1",
+  "author": "Collin Arnold",
   "main": "main.js",
   "scripts": {
     "start": "node_modules/.bin/electron ."
   },
   "dependencies": {
     "electron-prebuilt": "^0.30.4"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-electron-installer": "^0.37.0"
   }
 }
