--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "scripts": {
     "start": "node_modules/.bin/electron ."
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Coldarn/twiceover-client.git"
+  },
   "dependencies": {
     "electron-prebuilt": "^0.30.4"
   },
@@ -15,6 +19,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-electron-installer": "^0.37.0"
+    "grunt-electron-installer": "^0.37.0",
+    "rcedit": "^0.3.0"
   }
 }
